--- a/afes_venus_jax/config/afes_venus_paper.yaml
+++ b/afes_venus_jax/config/afes_venus_paper.yaml
@@ -14,7 +14,9 @@ numerics:
   dt: 600.0
   semi_implicit_alpha: 0.5
   hyperdiff_order: 8
-  hyperdiff_tau_smallest: 3600.0
+  # A gentler smallest-scale e-folding time helps the thermal tides amplify
+  # instead of being wiped out immediately, matching the AFES-Venus setup.
+  hyperdiff_tau_smallest: 86400.0
   dealiasing: true
   leapfrog_raw_coeff: 0.04
 physics:
@@ -22,8 +24,12 @@ physics:
   newtonian_profile: crisp1989
   enable_solar: true
   enable_newtonian: true
-  solar_peak_heating_K_per_day: 18.0
-  kz: 0.2
-  rayleigh_low_tau: 129600.0
+  # Stronger diurnal heating is needed to reproduce the cloud-top jet speed
+  # reported in the AFES-Venus study.
+  solar_peak_heating_K_per_day: 28.0
+  kz: 0.25
+  # Looser low-level drag prevents the lower boundary layer from suppressing
+  # the upward momentum transport that drives superrotation.
+  rayleigh_low_tau: 432000.0
   sponge_top_height: 90000.0
-  sponge_tau: 21600.0
+  sponge_tau: 86400.0
